--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.13.3",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "three": "^0.153.0",
     "valtio": "^1.10.5"
